SERVER-52965 TenantMigrationRecipientInstance should be removed from TenantMigrationRecipientService if inserting the instance's state doc fails with ConflictingOperationInProgress